--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -3,4 +3,5 @@
     <dimen name="dialog_width">300dp</dimen>
     <dimen name="spacing_medium">8dp</dimen>
     <dimen name="spacing_small">4dp</dimen>
+    <dimen name="spacing_large">16dp</dimen>
 </resources>
