--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -190,7 +190,7 @@
                             android:layout_marginBottom="8dp"
                             android:layout_marginEnd="8dp"
                             android:layout_marginStart="8dp"
-                            android:text="More Apps"
+                            android:text="More Designs"
                             android:textSize="19sp"
                             android:gravity="center"
                             app:layout_constraintBottom_toBottomOf="parent"
