--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,7 +37,7 @@
                         android:layout_width="match_parent"
                         android:layout_weight="8"
                         android:scaleType="centerCrop"
-                        android:src="@drawable/design10"
+                        android:src="@drawable/finger_design"
                         android:layout_height="0dp" />
                     <TextView
                         android:layout_width="wrap_content"
@@ -220,7 +220,7 @@
                             android:layout_marginEnd="8dp"
                             android:layout_marginStart="8dp"
                             android:layout_marginTop="8dp"
-                            android:src="@drawable/tutorial"
+                            android:src="@drawable/arabic"
                             app:layout_constraintBottom_toTopOf="@+id/textView4"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintHorizontal_bias="0.5"
@@ -235,7 +235,7 @@
                             android:layout_marginBottom="8dp"
                             android:layout_marginEnd="8dp"
                             android:layout_marginStart="8dp"
-                            android:text="Tutorials"
+                            android:text="Featured App"
                             android:textSize="19sp"
                             android:gravity="center"
                             app:layout_constraintBottom_toBottomOf="parent"
