--- a/app/src/main/res/layout/content_posters_grid.xml
+++ b/app/src/main/res/layout/content_posters_grid.xml
@@ -71,6 +71,7 @@
                 android:id="@+id/adView_1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 ads:adSize="MEDIUM_RECTANGLE"
                 ads:adUnitId="@string/admob_banner_id">
             </com.google.android.gms.ads.AdView>
@@ -127,6 +128,7 @@
                 android:id="@+id/adView_2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 ads:adSize="MEDIUM_RECTANGLE"
                 ads:adUnitId="@string/admob_banner_id">
             </com.google.android.gms.ads.AdView>
@@ -183,6 +185,7 @@
                 android:id="@+id/adView_3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 ads:adSize="MEDIUM_RECTANGLE"
                 ads:adUnitId="@string/admob_banner_id">
             </com.google.android.gms.ads.AdView>
@@ -239,6 +242,7 @@
                 android:id="@+id/adView_4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 ads:adSize="MEDIUM_RECTANGLE"
                 ads:adUnitId="@string/admob_banner_id">
             </com.google.android.gms.ads.AdView>
@@ -295,6 +299,7 @@
                 android:id="@+id/adView_5"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 ads:adSize="MEDIUM_RECTANGLE"
                 ads:adUnitId="@string/admob_banner_id">
             </com.google.android.gms.ads.AdView>
@@ -351,6 +356,7 @@
                 android:id="@+id/adView_6"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 ads:adSize="MEDIUM_RECTANGLE"
                 ads:adUnitId="@string/admob_banner_id">
             </com.google.android.gms.ads.AdView>
@@ -407,6 +413,7 @@
                 android:id="@+id/adView_7"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 ads:adSize="MEDIUM_RECTANGLE"
                 ads:adUnitId="@string/admob_banner_id">
             </com.google.android.gms.ads.AdView>
@@ -463,6 +470,7 @@
                 android:id="@+id/adView_8"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 ads:adSize="MEDIUM_RECTANGLE"
                 ads:adUnitId="@string/admob_banner_id">
             </com.google.android.gms.ads.AdView>
@@ -494,6 +502,7 @@
                 xmlns:ads="http://schemas.android.com/apk/res-auto"
                 android:id="@+id/adView_9"
                 android:layout_width="wrap_content"
+                android:layout_gravity="center"
                 android:layout_height="wrap_content"
                 ads:adSize="MEDIUM_RECTANGLE"
                 ads:adUnitId="@string/admob_banner_id">
