--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="galleryCurrentItemOverlay">@android:color/transparent</color>
     <color name="colorSimpleDialogText">#002256</color>
     <color name="colorDialogToolbar">@color/colorPrimaryDark</color>
+    <color name="colorQuizCard">#f79b99</color>
 </resources>
