--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,7 +37,7 @@
                         android:layout_width="match_parent"
                         android:layout_weight="8"
                         android:scaleType="centerCrop"
-                        android:src="@drawable/design10"
+                        android:src="@drawable/cover"
                         android:layout_height="0dp" />
                     <TextView
                         android:layout_width="wrap_content"
