--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#e57373</color>
-    <color name="colorPrimaryDark">#af4448</color>
-    <color name="colorAccent">#ffa4a2</color>
+    <color name="colorPrimary">#ff8f00</color>
+    <color name="colorPrimaryDark">#c56000</color>
+    <color name="colorAccent">#ffc046</color>
     <color name="colorSimpleDialogTitleText">#FFFFFF</color>
     <color name="colorWhite">#FFFFFF</color>
     <color name="colorLightGrey">#eae4e4</color>
@@ -12,5 +12,5 @@
     <color name="galleryCurrentItemOverlay">@android:color/transparent</color>
     <color name="colorSimpleDialogText">#002256</color>
     <color name="colorDialogToolbar">@color/colorPrimaryDark</color>
-    <color name="colorQuizCard">#f79b99</color>
+    <color name="colorQuizCard">@color/colorPrimaryDark</color>
 </resources>
