--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,7 +44,7 @@
                         android:layout_weight="2"
                         android:textSize="21sp"
                         android:gravity="center"
-                        android:text="Mehandi Designs"
+                        android:text="Ring Designs"
                         android:layout_height="0dp" />
 
                 </LinearLayout>
@@ -248,31 +248,6 @@
                 </android.support.v7.widget.CardView>
 
             </LinearLayout>
-            <android.support.v7.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_marginTop="@dimen/spacing_small"
-                android:layout_marginStart="@dimen/spacing_medium"
-                android:clickable="true"
-                android:id="@+id/quiz_app"
-                android:layout_marginEnd="@dimen/spacing_medium"
-                app:cardBackgroundColor="@color/colorQuizCard"
-                android:layout_height="wrap_content">
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:gravity="center"
-                    android:layout_height="wrap_content">
-                    <TextView
-                        android:text="Guess the Flag Quiz"
-                        android:layout_gravity="center"
-                        android:textSize="19sp"
-                        android:textColor="@color/colorWhite"
-                        android:layout_marginTop="@dimen/spacing_small"
-                        android:layout_marginBottom="@dimen/spacing_small"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
-                </LinearLayout>
-
-            </android.support.v7.widget.CardView>
             <LinearLayout
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
