--- a/app/src/main/res/layout/activity_images.xml
+++ b/app/src/main/res/layout/activity_images.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.appinspire.imagedesigns.ImagesActivity">
+    tools:context="com.amanapps.imagedesigns.ImagesActivity">
 
 </android.support.constraint.ConstraintLayout>
