ad ids coming from firebase

--- a/app/src/main/res/layout/content_posters_grid.xml
+++ b/app/src/main/res/layout/content_posters_grid.xml
@@ -27,6 +27,7 @@
         android:layout_width="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        android:gravity="center"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/scrollView2"
         android:layout_height="wrap_content">
