--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:id="@+id/scrollView"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/adView_main"
+        app:layout_constraintBottom_toTopOf="@+id/ad_container_bottom"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -266,24 +266,22 @@
                     <android.support.constraint.ConstraintLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
-
-                        <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
-                            android:id="@+id/adView_main2"
+                        <LinearLayout
+                            android:id="@+id/ad_container_top"
+                            android:orientation="vertical"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:gravity="center"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintHorizontal_bias="0.5"
+                            app:layout_constraintVertical_weight="7"
+                            app:layout_constraintStart_toStartOf="parent"
                             android:layout_marginBottom="8dp"
                             android:layout_marginEnd="8dp"
                             android:layout_marginTop="8dp"
-                            ads:adSize="LARGE_BANNER"
-                            ads:adUnitId="@string/admob_banner_id"
-                            ads:layout_constraintBottom_toTopOf="@+id/imageView7"
-                            ads:layout_constraintEnd_toEndOf="parent"
-                            ads:layout_constraintHorizontal_bias="0.5"
-                            ads:layout_constraintVertical_weight="7"
-                            ads:layout_constraintStart_toStartOf="parent"
-                            ads:layout_constraintTop_toTopOf="parent" >
+                            app:layout_constraintTop_toTopOf="parent">
 
-                        </com.google.android.gms.ads.AdView>
+                        </LinearLayout>
 
                         <ImageView
                             android:id="@+id/imageView7"
@@ -298,7 +296,7 @@
                             app:layout_constraintHorizontal_bias="0.5"
                             app:layout_constraintVertical_weight="3"
                             app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toBottomOf="@+id/adView_main2"
+                            app:layout_constraintTop_toBottomOf="@+id/ad_container_top"
                             app:srcCompat="@drawable/copyright" />
                     </android.support.constraint.ConstraintLayout>
                 </android.support.v7.widget.CardView>
@@ -310,18 +308,19 @@
         </LinearLayout>
 
     </ScrollView>
-    <com.google.android.gms.ads.AdView
-        xmlns:ads="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/adView_main"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <LinearLayout
+        android:id="@+id/ad_container_bottom"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:gravity="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/scrollView"
-        ads:adSize="BANNER"
-        ads:adUnitId="@string/admob_banner_id">
-    </com.google.android.gms.ads.AdView>
+        android:layout_height="wrap_content">
+
+    </LinearLayout>
+
 
 
 </android.support.constraint.ConstraintLayout>
