--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,7 +37,8 @@
                         android:layout_width="match_parent"
                         android:layout_weight="8"
                         android:scaleType="centerCrop"
-                        android:src="@drawable/cover"
+                        android:background="@color/colorLightGrey2"
+                        android:src="@drawable/ring_cover"
                         android:layout_height="0dp" />
                     <TextView
                         android:layout_width="wrap_content"
@@ -206,7 +207,7 @@
                     android:layout_weight="1"
                     android:layout_marginStart="@dimen/spacing_small"
                     android:clickable="true"
-                    android:id="@+id/about_us"
+                    android:id="@+id/card_privacy"
                     android:layout_height="135dp">
 
                     <android.support.constraint.ConstraintLayout
@@ -215,12 +216,12 @@
 
                         <ImageView
                             android:id="@+id/imageView4"
-                            android:layout_width="100dp"
+                            android:layout_width="80dp"
                             android:layout_height="0dp"
                             android:layout_marginEnd="8dp"
                             android:layout_marginStart="8dp"
                             android:layout_marginTop="8dp"
-                            android:src="@drawable/finger"
+                            android:src="@drawable/privacy_logo"
                             app:layout_constraintBottom_toTopOf="@+id/textView4"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintHorizontal_bias="0.5"
@@ -235,7 +236,7 @@
                             android:layout_marginBottom="8dp"
                             android:layout_marginEnd="8dp"
                             android:layout_marginStart="8dp"
-                            android:text="Featured App"
+                            android:text="Privacy Policy"
                             android:textSize="19sp"
                             android:gravity="center"
                             app:layout_constraintBottom_toBottomOf="parent"
